# OpenEngine

./: .gitconfig  .gitignore  .gitmessage.txt  .gitmodules  CMakeLists.txt  LICENSE  README.md  requirements.txt
cmake/: FindGraphviz.cmake  common_defines.cmake  common_functions.cmake  common_include.cmake  dependency_management.cmake
config/: Doxyfile  Doxyfile.in  setup.sh
cpp/: CMakeLists.txt  CMakeLists.txt.bak  Doxyfile.in  version.h
cpp/cmake/: common_defines.cmake  common_functions.cmake  common_include.cmake  property_list.cmake
cpp/spike/bus-test/: BusMessage.cpp  BusMessage.h  BusTest.cpp  CMakeLists.txt
cpp/spike/doxygen-test/: CMakeLists.txt  Calculations.h  DoxygenTest.cpp  Interface.h  Sub.h
cpp/spike/google-mock-test/: CMakeLists.txt  GoogleMockTest.cpp
cpp/src/include/: Conversions.h  Enumerator.h  Logging.h  StandardDefines.h  UniqueID.h
cpp/src/include/interfaces/: IDatabase.h  OESocket.h
cpp/src/include/message-bus/: AsyncMessageBus.h  MessageBus.h  MessageType.h  SyncMessageBus.h
cpp/src/include/net/: BroadcastReceiver.h  BroadcastSender.h  BroadcastServer.h  Client.h  Server.h  Socket.h  SocketServer.h  SocketSettings.h  TCPClient.h  TCPServer.h  TCPSocket.h  UDPListener.h  UDPSender.h  UDPSocket.h  UnicastClient.h  UnicastReceiver.h  UnixClient.h  UnixServer.h  UnixSocket.h
cpp/src/include/net/builders/: HintBuilder.h  RecvFlagBuilder.h  SendFlagBuilder.h  SocketBuilder.h
cpp/src/include/patterns/: Command.h  Decorator.h  Flyweight.h  FlyweightFactory.h  Observable.h  Observer.h  State.h  StateContext.h  Strategist.h  Strategy.h  StrategyException.h
cpp/src/include/serialization/: Deserializable.h  Serializable.h
cpp/src/include/sql/: Create.h  Database.h  Entry.h  Insert.h  List.h  SQL.h  SQLStatement.cpp  SQLStatement.h  Table.h  Values.h  Var.h
cpp/src/include/unique-identifiers/: UniqueID.h
cpp/src/include/wrappers/: WDisk.h  WMariaDB.h  WMySQL.h  WSQLite.h
cpp/src/lib/: CMakeLists.txt  Logging.cpp  UniqueID.cpp
cpp/src/lib/message-bus/: AsyncMessageBus.cpp  MessageBus.cpp  SyncMessageBus.cpp
cpp/src/lib/net/: BroadcastClient.cpp  BroadcastReceiver.cpp  BroadcastServer.cpp  Helpers.cpp  TCPClient.cpp  TCPServer.cpp  TCPSocket.cpp  UDPSocket.cpp  UnicastClient.cpp  UnicastReceiver.cpp  UnixClient.cpp  UnixServer.cpp  UnixSocket.cpp
cpp/src/lib/patterns/: Observable.cpp  Observer.cpp
cpp/src/lib/wrappers/: WDisk.cpp  WMariaDB.cpp  WMySQL.cpp  WSQLite.cpp
cpp/src/test/: CMakeLists.txt
cpp/src/test/functional/: SocketTesting.cpp
cpp/src/test/net/: SocketTest.cpp
cpp/src/test/patterns/: CommandTest.cpp  FlyweightTest.cpp  ObserverTest.cpp  StateTest.cpp  Test_Command.h  Test_Decorator.h  Test_Flyweight.h  Test_Observable.h  Test_State.h  Test_Strategy.h
cpp/src/test/types/: Test_UniqueID.h
cpp/src/test/unit/message-bus/: MessageBusTest.cpp
cpp/src/test/unit/patterns/: CommandTest.cpp  DecoratorTest.cpp
cpp/src/test/unit/types/: Test_Enumerator.h
cpp/src/test/unit/types/SQL/: Test_Var.h
cpp/src/test/wrappers/: Test_WDisk.h  Test_WSQLite.h
cpp/src/tools/: CMakeLists.txt
cpp/src/tools/game-server/: GameServer.cpp  GameServer.h
java/: build.gradle  settings.gradle
java/common/: build.gradle  settings.gradle
java/common/src/main/java/com/avernakis/common/: PicoCLIHelper.java  VersionInfo.java
java/common/src/main/java/com/avernakis/openengine/common/: PicoCLIHelper.java  VersionInfo.java
java/engine/: build.gradle
java/engine/src/main/java/com/avernakis/engine/: Engine.java
java/gradle/wrapper/: gradle-wrapper.properties
java/message-bus/: build.gradle
java/message-bus/src/main/java/com/avernakis/message/bus/: AsyncMessageBus.java  Handler.java  Message.java  MessageBus.java  SyncMessageBus.java
java/message-bus/src/main/java/com/avernakis/openengine/message/bus/: Message.java  MessageBus.java
java/message-bus/src/test/java/com/avernakis/message/bus/: AsyncMessageBusTest.java  MessageBusTest.java  SyncMessageBusTest.java
java/message-bus/src/test/java/com/avernakis/openengine/message/bus/: MessageBusTest.java
java/messagebus/: build.gradle
java/messagebus/src/main/java/com/avernakis/openengine/message/bus/: AsyncMessageBus.java  Handler.java  SyncMessageBus.java
java/shell/: build.gradle
java/shell/src/main/java/com/avernakis/shell/: Shell.java  Token.java
java/shell/src/main/java/com/avernakis/shell/commands/: Command.java  Help.java
java/tools/game-server/: build.gradle
java/tools/game-server/src/main/java/com/avernakis/openengine/tools/game/server/: GameServer.java
java/tools/gameserver/: build.gradle
java/tools/gameserver/src/main/java/com/avernakis/openengine/tools/game/server/: GameServer.java
spike/bus-test/: BusTest.cpp  CMakeLists.txt  TestEventMessage.h
spike/doxygen-test/: ArrayTemplate.h  Component.h  Super.h
spike/google-mock-test/: CMakeLists.txt
src/include/: Bus.h
src/include/message-bus/: AsyncMessageBus.h  EventMessage.h  EventMessageHandler.h  MessageBus.h  SyncMessageBus.h
src/lib/bus/: Bus.cpp
src/lib/message-bus/: EventMessageHandler.cpp  MessageBus.cpp
src/lib/unique-identifiers/: UniqueID.cpp
